Starting to operate with a bit of functionality

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,15 @@
 {
-  "short_name": "Duzza Games",
-  "name": "Duzza Games",
-  "icons": [
-    {
-      "src": "cwood-colors-striped.png",
-      "sizes": "192x192 64x64 32x32 24x24 16x16",
-      "type": "image/png"
-    }
-  ],
-  "start_url": "./index.html",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+    "short_name": "Perudo",
+    "name": "Perudo",
+    "icons": [
+        {
+            "src": "dice.png",
+            "sizes": "192x192 64x64 32x32 24x24 16x16",
+            "type": "image/png"
+        }
+    ],
+    "start_url": "./index.html",
+    "display": "standalone",
+    "theme_color": "#000000",
+    "background_color": "#ffffff"
 }
